<resources>
    <string name="app_name">Files</string>
    <string name="places">Places</string>
    <string name="storages">Storages on this device</string>
    <string name="permission_dialog_title">Please allow \'All files access\' for this app</string>
    <string name="permission_dialog_text">In order to use this app, you must permit access to your phone\'s storage in the Settings app.</string>
    <string name="cancel">Cancel</string>
    <string name="open_settings">Open Settings</string>
    <string name="permission_error_title">Permissions not granted</string>
    <string name="permission_error_text">The application is unusable without this permission. Click the button to quit.</string>
    <string name="close_app">Close app</string>
    <string name="free_space">%1$s free</string>
    <string name="recent">Recent files</string>
    <string name="favorites">Favorites</string>
    <string name="item_count">%1$d items</string>
    <string name="file_desc_string">%1$s • %2$s</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_size">By size</string>
    <string name="sort_by_date">By date</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="show_hidden">Show hidden files</string>
    <string name="show_hidden_description">Show files whose names start with a period (.)</string>
    <string name="folders_before_files">Sort folders before files</string>
    <string name="folders_before_files_desc">The folders will be displayed before files in the list</string>
    <string name="directory_read_error">Directory read error</string>
    <string name="directory_read_error_description">The directory is unreadable or you don\'t have enough permissions to read it.</string>
    <string name="default_sort_order">Default sort order</string>
</resources>